# Website_Report_Generator

./: .gitignore  requirements.txt
dev/backend/: pyproject.toml  requirements.txt
dev/backend/src/: main.py
