[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "cloudscraper>=1.2.71",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "lxml>=6.1.1",
    "streamlit>=1.58.0",
    "trafilatura>=2.1.0",
]
